--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,7 @@ nav2-common==1.1.9
 nav2-msgs==1.1.9
 nav2-simple-commander==1.0.0
 numpy==1.25.2
+opencv-python==4.8.0.76
 osrf-pycommon==2.0.2
 Pillow==10.0.0
 protobuf==4.24.0
