--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ hpack==4.0.0
 hyperframe==6.0.1
 multidict==6.0.4
 numpy==1.25.2
+opencv-python==4.8.0.76
 Pillow==10.0.0
 protobuf==4.24.2
 typing_extensions==4.7.1
